0.8.9-dev1
- Improve parameter display (#52, #114)
- Display Chi2 on each page (#115)
- The displayed Chi2-value for non-weighted fits is now
  normalized to the expected values of the fit. The
  documentation has been updated accordingly.
0.8.9
- Improved support for "ALV-7004" files (#104)
- Increase resolution for image export
- Load weights from PyCorrFit csv files 
- Tool 'Overlay Curves': show cropped correlation curves
- Tool 'Trace view': increase size of window (#93)
- Tool 'Global fitting': remove forced, joint weights
- Session comment dialog: more intuitive behavior (#116)
- Improve plot export (#95)
- Bugfixes:
   - Weighted fits at borders of fit interval were
     computed incorrectly due to integer division
   - Fitting algorithms did not work (#94)
   - Creating averages did not work (#123)
   - ASCII errors in statistics tool (#112)
- Under the hood:
   - Introduce new classes: Correlation, Fit, Trace
   - Code cleanup and rewrite to support planned features
   - In some cases support older versions of NumPy
0.8.8
- Improved support for "ALV-7004" files
- If you install the GUI with pip, you now need to include
  the `GUI` requirement: `pip install pycorrfit[GUI]`.
  The GUI depends on matplotlib and wxPython which is not
  required for scripting with the pycorrfit module.
- Bugfix: missing version string on SuSe linux (#101)
- Under the hood:
   - Python entry point script replaces "bin/" script
   - Windows build system hosted by appveyor.com
   - MacOS X build system hosted by travis-ci.org
   - New builds use wxPython3 (#85)
   - Unicode support without `reload(sys)`
   - Error messages are more verbose
0.8.7
- Removed unused fitting parameter d_eva from model 6022 and
  secured backwards compatibility.
- Improved support for ALV700X (#92)
- Bugfix: Corrected false display of Unicode characters on Windows
- Under the hood:
   - Code cleanup with pyflakes
   - Repo cleanup (#98)
0.8.6