@@ -4,6 +4,7 @@
 - The displayed Chi2-value for non-weighted fits is now
   normalized to the expected values of the fit. The
   documentation has been updated accordingly.
+- Add "All files" option in save dialogs (#97)
 0.8.9
 - Improved support for "ALV-7004" files (#104)
 - Increase resolution for image export
